[project]
name = "nonebug"
version = "0.4.3"
description = "nonebot2 test framework"
readme = "README.md"
requires-python = ">=3.10, <4.0"
license = "MIT"
authors = [
  { name = "AkiraXie", email = "l997460364@outlook.com" },
  { name = "yanyongyu", email = "yyy@nonebot.dev" }
]
keywords = ["bot", "cqhttp", "nonebot", "onebot", "pytest", "test"]
classifiers = ["Framework :: Pytest"]
dependencies = [
  "asgiref >=3.10.0, <4.0.0",
  "async-asgi-testclient >=1.4.8, <2.0.0",
  "nonebot2 >=2.3.0, <3.0.0",
  "pytest >=9.0.1, <10.0.0"
]

[project.urls]
documentation = "https://nonebot.dev/"
homepage = "https://nonebot.dev/"
repository = "https://github.com/nonebot/nonebug"

[project.entry-points.pytest11]
nonebug = "nonebug.fixture"

[dependency-groups]
dev = [
  "nonemoji >=0.1.4, <1.0.0",
  "pre-commit >=4.5.0, <5.0.0",
  "ruff >=0.14.6, <0.15.0",
]
test = [
  "nonebot2[fastapi] >=2.3.0, <3.0.0",
  "pytest-asyncio >=1.3.0, <2.0.0",
  "pytest-cov >=7.0.0, <8.0.0"
]

[build-system]
requires = ["uv_build >=0.9.0, <0.10.0"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "if __name__ == .__main__.:",
  "if (typing\\.)?TYPE_CHECKING( is True)?:",
  "@(abc\\.)?abstractmethod",
  "@(typing\\.)?overload",
  "raise NotImplementedError",
  "\\.\\.\\.",
  "pass",
]

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
disableBytesTypePromotions = true
pythonVersion = "3.10"
pythonPlatform = "All"
executionEnvironments = [
  { root = "./tests", extraPaths = [
    "./",
  ] },
  { root = "./" },
]

[tool.pytest]
addopts = [
  "--cov",
  "nonebug",
  "--cov-report",
  "term-missing",
  "-p",
  "no:nonebug",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W",  # pycodestyle warnings
  "E",  # pycodestyle errors
  "I",  # isort
  "UP",  # pyupgrade
  "ASYNC",  # flake8-async
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "PYI",  # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",  # flake8-quotes
  "TID",  # flake8-tidy-imports
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E402",  # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001",  # ambiguous-unicode-character-string
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF003",  # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
length-sort = true
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.uv]
required-version = ">=0.9.0"
default-groups = ["test", "dev"]

[tool.uv.build-backend]
module-name = "nonebug"
module-root = ""
